2003-11-06 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/port.h,
	* src/hc08/main.c,
	* src/mcs51/main.c,
	* src/ds390/main.c,
	* src/z80/main.c,
	* src/avr/main.c,
	* src/pic/main.c,
	* src/pic16/main.c,
	* src/xa51/main.c: added hasExtBitOp & oclsExpense functions to ports
	* src/SDCCicode.c: changed several IS_FARSPACE tests to isOclsExpensive
	tests (which uses the port's oclsExpense function)
	* src/SDCC.y,
	* src/SDCCast.c,
	* src/SDCCicode.c,
	* src/hc08/gen.c,
	* src/ds390/gen.c,
	* src/mcs51/gen.c: added support for the SWAP iCode (RFE #834167)
        
2003-11-04 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCcse.c (ifxOptimize),
	* src/SDCClabel.c (labelIfx, deleteIfx): When the condition to
	an IFX iCode is volatile, convert to DUMMY_READ_VOLATILE instead
	deleting the IFX iCode.
	* src/hc08/ralloc.c: reduced unneeded slocs
	* src/hc08/gen.c: fixed bug in asmopToBoolean

2003-11-04  Borut Razem <borut.razem@siol.net>

	* configure, configure.in, sdcc_vc_in.h, sdcconf.h,
	  support/Util/NewAlloc.c, as/hc08/lklibr.c, as/mcs51/lklibr.c,
	  as/z80/aslist.c, as/z80/assym.c: decision to include malloc.h
	  transferred to configure

2003-11-03 Bernhard Held <bernhard@bernhardheld.de>

	Use headers defined in the C[++] standards:
	* sim/ucsim/gui.src/serio.src/fileio.cc
	* sim/ucsim/gui.src/serio.src/frontend.cc
	* sim/ucsim/gui.src/serio.src/main.cc
	* sim/ucsim/gui.src/serio.src/posix_signal.cc
	* support/Util/NewAlloc.c
	* as/hc08/lklibr.c
	* as/mcs51/lklibr.c
	* as/z80/aslist.c
	* as/z80/assym.c

2003-11-03  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	* Added MSVC projects for hc08 assembler and linker:
	all.dsp, config.dsp, sdcc.dsw, /as/hc08/as_hc08.dsp,
	/as/hc08/link_hc08.dsp

2003-11-03 Martin Helmling <Martin.Helmling@octo-soft.de>

        * debugger/mcs51/cmd.c: allows filename starting with digit(+ some debug)

2003-11-02 Bernhard Held <bernhard@bernhardheld.de>

        * src/SDCCmain.c (linkEdit): "fixed" again bug #833605
